alpm-types/src/version/snapshots/base::invalid_pkgrel@case_6.snap
---
source: alpm-types/src/version/base.rs
---
error: invalid package release
 | 
 | 1.a
 | ~~^ expected single '.' followed by positive decimal integer
 | 
 = while parsing:
   alpm-pkgrel: (1.a)
   → invalid package release
   → expected single '.' followed by positive decimal integer
