alpm-types/src/version/snapshots/base::invalid_pkgver@case_1.snap
---
source: alpm-types/src/version/base.rs
---
1:foo
 ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace character
