alpm-types/src/version/snapshots/base::invalid_pkgver@case_2.snap
---
source: alpm-types/src/version/base.rs
---
foo-1
   ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace character
