alpm-types/src/version/snapshots/base::invalid_pkgver@case_4.snap
---
source: alpm-types/src/version/base.rs
---
ß
^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
