alpm-types/src/version/snapshots/base::invalid_pkgver@case_5.snap
---
source: alpm-types/src/version/base.rs
---
1.ß
  ^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace character
