alpm-types/src/version/snapshots/base::invalid_pkgver@case_6.snap
---
source: alpm-types/src/version/base.rs
---

^
invalid pkgver character
expected an ASCII character, except for ':', '/', '-', '<', '>', '=', or any whitespace characters
